# birdfont

./: .gitignore  .travis.yml  .travis.yml-old  AUTHORS  Makefile  NEWS  README  README.md  TRANSLATORS  android.vapi  bavala.py  birdfont-autotrace.sh  birdfont-debug.sh  birdfont-export.sh  birdfont-import-debug.sh  birdfont-import.sh  birdfont-test.sh  birdfont.desktop  birdfont.pot  birdfont.sh  birdfont_install  build.py  build_macport.py  configure  dodo.py  glib-2.0.vapi  install  install.py  libgit2.vapi  loadfont.vapi  meson.build  svgbird.deps  svgbirdpoint.vapi  uninstall  update_translations.py  version.py  waf  webkit2gtk-3.0.deps  webkit2gtk-3.0.vapi  write_config.py  (+1 more)
birdfont/: GtkWindow.vala  Main.vala  meson.build  wscript
birdfont-autotrace/: AutoTrace.vala  meson.build
birdfont-export/: BirdfontExport.vala  meson.build  wscript
birdfont-import/: BirdFontImport.vala  meson.build
birdfont-test/: TestRunner.vala  meson.build
birdui/: AbsoluteLayout.vala  BoxLayout.vala  Component.vala  GtkWidget.vala  GtkWindow.vala  HBox.vala  Overflow.vala  Style.vala  SvgComponent.vala  VBox.vala
fixed-kerning-example/: README.txt  build.sh  clean.sh  fk-example.birdfont  fk-font-editor.c  fk-font-editor.h  fk-test.c  fk.c  fk.h  otf-fk-documentation.html  run.sh
fonts/: BetecknaBirdfont.bf  Decibel.bf  Downstream.bf  README
layout/: birdfont.rc  index.html  style.css  supplement.js
libbirdfont/: AbstractMenu.vala  Allocation.vala  AlternateSets.vala  Argument.vala  BackgroundImage.vala  BackgroundSelection.vala  BackgroundSelectionTool.vala  BackgroundTab.vala  BackgroundTool.vala  BackgroundTools.vala  BackupDir.vala  BackupTab.vala  BezierPoints.vala  BezierTool.vala  BirdFont.vala  BirdFontFile.vala  BirdFontPart.vala  Birdfont.vala  Button.vala  CanvasSettings.vala  CharDatabase.vala  CharDatabaseParser.vala  CharacterInfo.vala  CheckBox.vala  CircleTool.vala  ClickMap.vala  ClipTool.vala  Color.vala  ColorPicker.vala  ColorTool.vala  Config.vala.in  Context.vala  CutBackgroundTool.vala  CutTool.vala  DefaultCharactersSet.vala  DefaultGlyphs.vala  DescriptionDisplay.vala  DescriptionTab.vala  Dialog.vala  Doubles.vala  (+172 more)
libbirdfont/GraphicsGems/: GraphicsGems.h  fit_cubic.c
libbirdfont/OpenFontFormat/: Alternate.vala  AlternateFeature.vala  CffTable.vala  CligFeature.vala  Cmap.vala  CmapSubtable.vala  CmapSubtableFormat0.vala  CmapSubtableFormat12.vala  CmapSubtableFormat4.vala  CodePageBits.vala  ContextualLigature.vala  ContextualLigatureCollection.vala  ContextualLigatureList.vala  ContextualLigatureSet.vala  CvtTable.vala  DirectoryTable.vala  Feature.vala  FeatureList.vala  FkKern.vala  FkTable.vala  FontData.vala  GaspTable.vala  GdefTable.vala  GlyfData.vala  GlyfTable.vala  GposTable.vala  Gsub.vala  GsubTable.vala  HeadTable.vala  HheaTable.vala  HmtxTable.vala  Kern.vala  KernList.vala  KernSplitter.vala  KernSubtable.vala  KernTable.vala  KerningPair.vala  Ligature.vala  LigatureCollection.vala  LigatureList.vala  (+21 more)
libbirdfont/Renderer/: CachedFont.vala  CarioDrawing.vala  Drawing.vala  FallbackFont.vala  FontCache.vala  LineTextArea.vala  Text.vala  TextArea.vala  TextTab.vala  fontconfig.c
libbirdfont/Svg/: Color.vala  Defs.vala  Gradient.vala  Object.vala  Points.vala  Rectangle.vala  Stop.vala  SvgDrawing.vala  SvgFile.vala  SvgParser.vala  SvgPath.vala  SvgStyle.vala  SvgTransform.vala  SvgTransforms.vala
libbirdfont/TextRendering/: FallbackFont.vala  LineTextArea.vala  Text.vala  TextArea.vala  fontconfig.c
libbirdgems/: FitCubic.vala~  GGVecLib.c  birdgems.vala  fit_cubic.c  fit_cubic.c~  meson.build
libbirdxml/: Attribute.vala  Attributes.vala  Tag.vala  Xml.vala  XmlData.vala  XmlString.vala
libsvgbird/: AttributePattern.vala  BezierPoints.vala  Circle.vala  ClipPath.vala  Color.vala  Defs.vala  Doubles.vala  Ellipse.vala  EmptyObject.vala  Gradient.vala  Layer.vala  Line.vala  LineCap.vala  LinearGradient.vala  Object.vala  ObjectGroup.vala  PointValue.vala  Points.vala  Polygon.vala  Polyline.vala  RadialGradient.vala  Rectangle.vala  Selector.vala  SelectorPattern.vala  SelectorTag.vala  Stop.vala  StyleSheet.vala  SvgArc.vala  SvgDrawing.vala  SvgFile.vala  SvgPath.vala  SvgStyle.vala  SvgTransform.vala  SvgTransforms.vala  Text.vala  ViewBox.vala  point_value.h  text_drawing.c  text_helpers.c
linux/: birdfont.1  wscript
mac/: Info.plist  birdfont.icns  birdfont.sh  build_mac.py  build_macport.py  create_dmg.py
po/: LINGUAS  POTFILES.in  birdfont.pot  cs.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  he.po  id.po  it.po  ja.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po
resources/: birdfont-crashdb.conf  birdfont.py  bright.theme  codepages.sqlite  dark.theme  default.theme  high_contrast.theme  icons.bf  icons.birdfont  key_bindings.xml  meson.build  roboto.bf  source_birdfont.py
resources/linux/: birdfont-autotrace.1  birdfont-export.1  birdfont-import.1  birdfont.1  birdfont.appdata.xml  birdfont.desktop  birdfont.xml
resources/mac/: birdfont.icns
scripts/: Android.mk  AndroidBirdFont.mk  AndroidBirdGems.mk  AndroidBirdXml.mk  Application.mk  android_build.py  bavala.py  bsd_build.py  build.py  builder.py  complete_translations.py  configfile.py  export.sh  fuzzbf.py  fuzzsvg.py  linux_build.py  mac_build.py  macport_build.py  macport_configure.py  macport_install.py  release.sh  run.py  snap.py  snap.sh  snapcraft.yaml  translations.py  update_translations.py  version.py  win_build.py  windows_build.py
src/: Allocation.vala  Argument.vala  BackgroundSelection.vala  BackgroundTool.vala  Birdfont.vala  BirdfontExport.vala  ClipTool.vala  ContentDisplay.vala  Context.vala  CutBackgroundTool.vala  CutTool.vala  DropMenu.vala  EditPoint.vala  EditPointHandle.vala  EotWriter.vala  ExportTool.vala  FileSelection.vala  Font.vala  FontDisplay.vala  Glyph.vala  GlyphBackgroundImage.vala  GlyphCanvas.vala  GlyphCollection.vala  GlyphRange.vala  GlyphTable.vala  GridTool.vala  GtkInterface.vala  GtkWindow.vala  IOThread.vala  Icons.vala  Kerning.vala  (+36 more)
(+648 files in other folders)
