source = files(
'AbstractMenu.vala',
'Allocation.vala',
'AlternateSets.vala',
'Argument.vala',
'BackgroundImage.vala',
'BackgroundSelectionTool.vala',
'BackgroundSelection.vala',
'BackgroundTab.vala',
'BackgroundTools.vala',
'BackgroundTool.vala',
'BackupDir.vala',
'BackupTab.vala',
'BezierPoints.vala',
'BezierTool.vala',
'BirdFontFile.vala',
'BirdFontPart.vala',
'BirdFont.vala',
'Button.vala',
'CharacterInfo.vala',
'CharDatabaseParser.vala',
'CharDatabase.vala',
'CheckBox.vala',
'CircleTool.vala',
'ClipTool.vala',
'ColorPicker.vala',
'ColorTool.vala',
'Color.vala',
#'Config.vala',
'CutBackgroundTool.vala',
'DefaultCharactersSet.vala',
'DescriptionDisplay.vala',
'Dialog.vala',
'Doubles.vala',
'DrawingTools.vala',
'EditPointHandle.vala',
'EditPoint.vala',
'EmptyTab.vala',
'EotWriter.vala',
'Expander.vala',
'ExportCallback.vala',
'ExportSettings.vala',
'ExportTool.vala',
'ExportUtils.vala',
'FileChooser.vala',
'FileDialogTab.vala',
'FileTools.vala',
'FontDisplay.vala',
'FontName.vala',
'FontSettings.vala',
'Font.vala',
'GlyphCanvas.vala',
'GlyphCollection.vala',
'GlyphMaster.vala',
'GlyphRange.vala',
'GlyphSelection.vala',
'GlyphSequence.vala',
'GlyphTable.vala',
'GlyphTab.vala',
'Glyph.vala',
'Gradient.vala',
'GridTool.vala',
'GuideTab.vala',
'Headline.vala',
'HiddenTools.vala',
'ImportUtils.vala',
'Intersection.vala',
'KerningClasses.vala',
'KerningDisplay.vala',
'KerningList.vala',
'KerningRange.vala',
'KerningStrings.vala',
'KerningTools.vala',
'Kerning.vala',
'KeyBindings.vala',
'LabelTool.vala',
'LanguageSelectionTab.vala',
'LayerLabel.vala',
'Layer.vala',
'LicenseDialog.vala',
'LigatureList.vala',
'Ligatures.vala',
'Line.vala',
'LoadCallback.vala',
'MainWindow.vala',
'MenuAction.vala',
'MenuItem.vala',
'MenuTab.vala',
'Menu.vala',
'MergeTask.vala',
'MessageDialog.vala',
'MoveTool.vala',
'NativeWindow.vala',
'OpenFontFormat/AlternateFeature.vala',
'OpenFontFormat/Alternate.vala',
'OpenFontFormat/CffTable.vala',
'OpenFontFormat/CligFeature.vala',
'OpenFontFormat/CmapSubtableFormat0.vala',
'OpenFontFormat/CmapSubtableFormat12.vala',
'OpenFontFormat/CmapSubtableFormat4.vala',
'OpenFontFormat/CmapSubtable.vala',
'OpenFontFormat/Cmap.vala',
'OpenFontFormat/CodePageBits.vala',
'OpenFontFormat/ContextualLigatureCollection.vala',
'OpenFontFormat/ContextualLigature.vala',
'OpenFontFormat/CvtTable.vala',
'OpenFontFormat/DirectoryTable.vala',
'OpenFontFormat/FeatureList.vala',
'OpenFontFormat/Feature.vala',
'OpenFontFormat/FontData.vala',
'OpenFontFormat/GaspTable.vala',
'OpenFontFormat/GdefTable.vala',
'OpenFontFormat/GlyfData.vala',
'OpenFontFormat/GlyfTable.vala',
'OpenFontFormat/GposTable.vala',
'OpenFontFormat/GsubTable.vala',
'OpenFontFormat/HeadTable.vala',
'OpenFontFormat/HheaTable.vala',
'OpenFontFormat/HmtxTable.vala',
'OpenFontFormat/KerningPair.vala',
'OpenFontFormat/KernList.vala',
'OpenFontFormat/KernSplitter.vala',
'OpenFontFormat/KernSubtable.vala',
'OpenFontFormat/KernTable.vala',
'OpenFontFormat/Kern.vala',
'OpenFontFormat/LigatureCollection.vala',
'OpenFontFormat/LigatureSet.vala',
'OpenFontFormat/Ligature.vala',
'OpenFontFormat/load_font.c',
'OpenFontFormat/loadfont.h',
'OpenFontFormat/LocaTable.vala',
'OpenFontFormat/Lookups.vala',
'OpenFontFormat/Lookup.vala',
'OpenFontFormat/MaxpTable.vala',
'OpenFontFormat/NameTable.vala',
'OpenFontFormat/OffsetTable.vala',
'OpenFontFormat/OpenFontFormatReader.vala',
'OpenFontFormat/OpenFontFormatWriter.vala',
'OpenFontFormat/Os2Table.vala',
'OpenFontFormat/OtfInputStream.vala',
'OpenFontFormat/OtfTable.vala',
'OpenFontFormat/PairFormat1.vala',
'OpenFontFormat/PostTable.vala',
'OpenFontFormat/UnicodeRangeBits.vala',
'OrientationTool.vala',
'OtfFeatureTable.vala',
'OtfLabel.vala',
'OtfTags.vala',
'overview_glyph.c',
'OverViewItem.vala',
'OverviewTools.vala',
'OverView.vala',
'OverwriteBfFile.vala',
'OverWriteDialogListener.vala',
'OverwriteDialog.vala',
'PathList.vala',
'Path.vala',
'PenTool.vala',
'PointConverter.vala',
'PointSelection.vala',
'PointTool.vala',
'Preferences.vala',
'PreviewTools.vala',
'Preview.vala',
'QuestionDialog.vala',
'RecentFiles.vala',
'RectangleTool.vala',
'Renderer/CachedFont.vala',
'Renderer/FallbackFont.vala',
'Renderer/FontCache.vala',
'Renderer/fontconfig.c',
'Renderer/LineTextArea.vala',
'Renderer/TextArea.vala',
'Renderer/Text.vala',
'ResizeTool.vala',
'Row.vala',
'SaveCallback.vala',
'SaveDialogListener.vala',
'SaveDialog.vala',
'ScaledBackgroundPart.vala',
'ScaledBackgrounds.vala',
'ScaledImage.vala',
'Screen.vala',
'Scrollbar.vala',
'SearchPaths.vala',
'SettingsDisplay.vala',
'SettingsItem.vala',
'SettingsTab.vala',
'SpacingClassTab.vala',
'SpacingClassTools.vala',
'SpacingClass.vala',
'SpacingData.vala',
'SpacingTab.vala',
'SpacingTools.vala',
'SpinButton.vala',
'Stop.vala',
'String.vala',
'StrokeTask.vala',
'StrokeTool.vala',
'SubMenu.vala',
'SvgArc.vala',
'SvgFontFormatWriter.vala',
'SvgFont.vala',
'SvgParser.vala',
'SvgStyle.vala',
'SvgTransforms.vala',
'SvgTransform.vala',
'Svg.vala',
'TabBar.vala',
'TabContent.vala',
'TableLayout.vala',
'Table.vala',
'Tab.vala',
'Task.vala',
'TestBirdFont.vala',
'TestCases.vala',
'Test.vala',
'TextListener.vala',
'ThemeTab.vala',
'ThemeTools.vala',
'Theme.vala',
'Toolbox.vala',
'ToolCollection.vala',
'ToolItem.vala',
'Tool.vala',
'TrackTool.vala',
'UniRange.vala',
'VersionList.vala',
'Widget.vala',
'ZoomBar.vala',
'ZoomTool.vala',
'ZoomView.vala',
'../loadfont.vapi',
)

posix_dep = meson.get_compiler('vala').find_library('posix')

incdir = [
  include_directories('OpenFontFormat'),
  ]
conf = configuration_data()
conf.set('PREFIX', get_option('prefix'))
conf.set('PROJECT_VERSION', PROJECT_VERSION)


confsrc = configure_file(input : 'Config.vala.in',
        output : 'Config.vala',
        configuration : conf)
conf_dep = declare_dependency (sources : confsrc)


libbirdfont = shared_library('birdfont', 
  sources : [source],
  vala_header: vapi_dir/'birdfont.h',
  vala_vapi: vapi_dir/'birdfont.vapi',
  dependencies: [dependencies, deps1, deps2, posix_dep, inc_rooth_dep, conf_dep],
  version: '36.0',
  link_with: [libgems],
  include_directories : incdir,
  install : true,
)

